--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,79 @@
-body {
-    font-family: 'lato' sans-serif;
+:root {
+   background-color: rgb(29, 26, 26)
+
+}
+*{box-sizing: border-box;
+margin: 0;
+padding: 0;
+font-size: 62.5%;
+font-family: 'Nova Square' cursive;
+
 }
 
-.start-div {
-    display: block;
+h1 {font-size: 5.4;
+   color: #ffff;
+   margin-bottom: 4rem;
 }
 
-.question-div {
-    display: none;
+.container {
+   width: 100vw;
+   height: flex;
+   justify-content: center;
+   align-items: center;
+   max-width: 80rem;
+   margin: 0 auto;
+   padding: 2rem;
 }
+.flex-column {
+   display: flex;
+   flex-direction: column;
+}
+.flex-center {
+   justify-content: center;
+   align-items: center;
+}
+.justify-center {
+   justify-content: center;
+}
+.text-center {
+text-align: center;
+}
+.hidden {
+   display: none;
+}
+.btn { font-size: 2.4rem;
+padding: 2rem 0;
+width: 30rem;
+text-align: center;
+margin-bottom: 1rem;
+text-decoration: none;
+color: rgb(28, 26. 26);
+
+background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
+border-radius: 4px;
+}
+.btn:hover {
+   cursor: pointer;
+   box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114,244, 0.6);
+   transition: transform 150ms;
+   Transform: scale(1.03);
+}
+.btn[disabled]:hover {
+cursor: not-allowed;
+box-shadow: none;
+transform: none;
+}
+#highscore-btn {
+   background: linear gradinat(90deg, rgb(255, 247, 9) 0%, rgb(240, 221, 6) 100%);
+}
+
+#highschore-btn:hover {
+   box-shadow: 0 0.4rem 1.4rem 1.4rem 0 rgba(255,255,0,0.5)
+}
+
+.fa-crown {
+font-size: 2.5rem;
+margin-left: 1rem
+
+}
+
