--- a/style.css
+++ b/style.css
@@ -70,3 +70,37 @@ transform: none;
 #highschore-btn:hover {
    box-shadow: 0 0.4rem 1.4rem 1.4rem 0 rgba(255,255,0,0.5)
 }
+/* End Page CSS */
+.end-form-container {
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   max-width: 30rem;  
+}
+input {
+   margin-bottom: 1rem;
+   width: 20rem;
+   padding: 1.5rem;
+   font-size: 1.8rem;
+   border: none;
+   box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+input::placeholder {
+   color: #aaa;
+}
+
+#username {
+   margin-bottom: 3rem;
+   width: 100%;
+   outline: none;
+
+}
+
+#end-text {
+   font-size: 2.4rem;
+   color: #fff;
+   text-align: center;
+}
+   #saveScoreBtn {
+      border: none
+   }
