--- a/game.css
+++ b/game.css
@@ -1,69 +1,82 @@
-body {
-    color: #fff;
-}
-
 .choice-container {
     display: flex;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.5rem;
     width: 100%;
-    border-radius: 4px;
-    background: rgb(18, 93, 255);
-    font-size: 3rem;
-    min-width: 80 rem;
-}
-.choice-container:hover {
+    font-size: 1.8rem;
+    border: 0.1rem solid rgb(86, 194, 204, 0.25);
+    background-color: white;
+  }
+  
+  .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(6, 103, 247, 0.5);
-    transform: scale(1.02);
-    transform: transform 100ms;
-}
-.choice-prefix {
-    padding: 2rem 2.5rem;
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 194, 204, 0.5);
+    transform: translateY(-0.1rem);
+    transition: transform 150ms;
+  }
+  
+  .choice-prefix {
+    padding: 1.5rem 2.5rem;
+    background-color: #00c2cb;
     color: white;
-}
-.choice-text {
-    padding: 2rem;
-    width: 100%
-}
-.correct {
-    background: linear-gradient(32deg, rgba(11, 223, 36) 0%, rgb(41, 232, 111) 100%);
-}
-
-.incorrect {
-    background: linear-gradient(32deg, rgba(230, 29, 29, 1) 0%, rgb(224, 11, 11, 1) 100%);
-}
-
-/* Heads up Display */
-
-#hud {
+  }
+  
+  .choice-text {
+    padding: 1.5rem;
+    width: 100%;
+  }
+  
+  .correct {
+    background-color: #28a745;
+  }
+  
+  .incorrect {
+    background-color: #dc3545;
+  }
+  
+  /* HUD */
+  
+  #hud {
     display: flex;
     justify-content: space-between;
-}
-.hud-prefix {
+  }
+  
+  .hud-prefix {
     text-align: center;
     font-size: 2rem;
-}
-
-.hud-main-text {
+  }
+  
+  .hud-main-text {
     text-align: center;
-}
-#progressBar {
+  }
+  
+  #progressBar {
     width: 20rem;
-    height: 3rem;
-    border: 0.2rem solid rgb(11, 223, 36);
-    margin-top: 2rem;
-    border-radius: 50px;
-    overflow: hidden;
-}
-
-#progressBarFull {
-    height: 100%;
-    background: rgb(11 ,223 ,36);
+    height: 4rem;
+    border: 0.3rem solid #00c2cb;
+    margin-top: 1.5rem;
+  }
+  
+  #progressBarFull {
+    height: 3.4rem;
+    background-color: #00c2cb;
     width: 0%;
-}
-
-    @media screen and (max-width: 768px) {
-    .choice-container {
-        min-width: 40rem;
+  }
+  
+  /* LOADER */
+  #loader {
+    border: 1.6rem solid white;
+    border-radius: 50%;
+    border-top: 1.6rem solid #00c2cb;
+    width: 12rem;
+    height: 12rem;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
     }
-}       
+    100% {
+      transform: rotate(360deg);
+    }
+  }
