--- a/style.css
+++ b/style.css
@@ -1,106 +1,127 @@
 :root {
-   background-color: rgb(29, 26, 26)
+   background-color: #f6f6f6;
+   font-size: 62.5%;
 
 }
-*{box-sizing: border-box;
-margin: 0;
-padding: 0;
-font-size: 62.5%;
-font-family: 'Nova Square' cursive;
-
+* {
+   box-sizing: border-box;
+   font-family: Arial, Helvetica, sans-serif;
+   margin: 0;
+   padding: 0;
+   color: #333;
+}
+h1,
+h2,
+h3,
+h4 {
+   margin-bottom: 1rem;
 }
 
-h1 {font-size: 5.4;
-   color: #ffff;
+h1 {
+   font-size: 5.4rem;
+   color: #00c2cb;
+   margin-bottom: 5rem;
+}
+
+h1 > span {
+   font-size: 4.2rem;
    margin-bottom: 4rem;
+   font-weight: 700;
+
 }
 
+h2 {
+   font-size: 4.2rem;
+   margin-bottom: 4rem;
+   font-weight: 700;
+
+}
+
+h3 {
+   font-size: 2.8rem;
+   font-weight: 500;
+}
+
+/* UTILITIES */
 .container {
    width: 100vw;
-   height: flex;
+   height: 100vh;
+   display: flex;
    justify-content: center;
    align-items: center;
    max-width: 80rem;
    margin: 0 auto;
-   padding: 2rem;
 }
+
+.container > * {
+   width: 100%;
+}
+
 .flex-column {
    display: flex;
    flex-direction: column;
 }
+
 .flex-center {
    justify-content: center;
    align-items: center;
 }
+
 .justify-center {
    justify-content: center;
 }
+
 .text-center {
-text-align: center;
+   text-align: center;
 }
+
 .hidden {
    display: none;
 }
-.btn { font-size: 2.4rem;
-padding: 2rem 0;
-width: 30rem;
-text-align: center;
-margin-bottom: 1rem;
-text-decoration: none;
-color: rgb(28, 26. 26);
 
-background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
-border-radius: 4px;
-}
-.btn:hover {
-   cursor: pointer;
-   box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114,244, 0.6);
-   transition: transform 150ms;
-   Transform: scale(1.03);
-}
-.btn[disabled]:hover {
-cursor: not-allowed;
-box-shadow: none;
-transform: none;
-}
-#highscore-btn {
-   background: linear gradinat(90deg, rgb(255, 247, 9) 0%, rgb(240, 221, 6) 100%);
-}
-
-#highschore-btn:hover {
-   box-shadow: 0 0.4rem 1.4rem 1.4rem 0 rgba(255,255,0,0.5)
-}
-/* End Page CSS */
-.end-form-container {
-   width: 100%;
-   display: flex;
-   flex-direction: column;
-   max-width: 30rem;  
-}
-input {
-   margin-bottom: 1rem;
-   width: 20rem;
-   padding: 1.5rem;
+/* BUTTONS */
+.btn {
    font-size: 1.8rem;
-   border: none;
-   box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
-}
-input::placeholder {
-   color: #aaa;
-}
-
-#username {
-   margin-bottom: 3rem;
-   width: 100%;
-   outline: none;
-
-}
-
-#end-text {
-   font-size: 2.4rem;
-   color: #fff;
+   padding: 1rem 0;
+   width: 20rem;
    text-align: center;
-}
-   #saveScoreBtn {
-      border: none
-   }
+   border: 0.1rem solid #00c2cb;
+   margin-bottom: 1rem;
+   text-decoration: none;
+   color: #00c2cb;
+   background-color: white;
+ }
+ 
+ .btn:hover {
+   cursor: pointer;
+   box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 194, 203, 0.5);
+   transform: translateY(-0.1rem);
+   transition: transform 150ms;
+ }
+ 
+ .btn[disabled]:hover {
+   cursor: not-allowed;
+   box-shadow: none;
+   transform: none;
+ }
+ 
+ /* FORMS */
+ form {
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center; 
+ }
+
+ input {
+     margin-bottom: 1rem;
+     width: 20rem;
+     padding: 1.5rem;
+     border: none;
+     font-size: 1.5rem;
+     box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 194, 203, 0.5);
+ }
+
+ input::placeholder {
+     color: #aaa;
+ }
